# othello

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  index.js  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
apps/client/: index.html  package.json  tsconfig.json
apps/client/src/: App.tsx  index.css
apps/client/src/components/: Board.tsx  BottomInfo.tsx  ConnectionModal.tsx  Tile.tsx  TopInfo.tsx
apps/server/: index.ts  package.json  tsconfig.json
client/: package.json
client/src/: App.js  index.css
client/src/components/: BottomInfo.js  Connect.js  TopInfo.js
infra/: README.md  deploy-container-app.sh  main.bicep
server/: index.js  package.json
src/: App.tsx  index.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: game.rs  lib.rs  main.rs
src/components/: Board.tsx  BottomInfo.tsx  ConnectionModal.tsx  Tile.tsx  TopInfo.tsx
webapp/: package-lock.json  package.json
webapp/src/: App.js  index.css
webapp/src/components/: Board.js  Connect.js  ConnectionModal.js  GameInfo.js  Tile.js
