[package]
name = "othello"
version = "0.1.0"
description = "OthelloP2P"
authors = ["Jonatan Solheim"]
edition = "2021"

[lib]
name = "othello_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
iroh = "0.98.2"
mdns-sd = "0.20.0"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tokio = { version = "1", features = ["io-util", "macros", "sync", "time"] }
